# dbms-project

./: DATABASE_UPDATES_SUMMARY.md  README.md  additional_triggers.sql  app.py  database_functions.sql  database_procedures.sql  database_procedures_functions.sql  database_schema.sql  database_triggers.sql  feature_summary.md  main.py  pyproject.toml  requirements.txt  simple_procedures.sql  test.py  test_functions.sql  test_new_features.sql  test_procedures.sql  validate.sql
sql/: additional_triggers.sql  database_functions.sql  database_procedures.sql  database_procedures_functions.sql  database_schema.sql  database_triggers.sql  test_new_features.sql  validate.sql
templates/: base.html  connections.html  dashboard.html  index.html  login.html
templates/alumni/: achievements.html  add.html  edit_achievement.html  list.html
templates/feedback/: add.html  list.html
templates/industry/: add.html  list.html
templates/sessions/: add.html  list.html
templates/skills/: add.html  list.html
templates/students/: add.html  list.html
templates/test/: procedures.html  triggers.html
