[project]
name = "dbmsproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.6.3",
    "click==8.1.7",
    "flask==2.3.3",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "mysql-connector-python==8.2.0",
    "werkzeug==2.3.7",
]
